--- a/editor.css
+++ b/editor.css
@@ -17,7 +17,7 @@ body{
 
 /*Aqui muda a cor da navbar*/
 #nav-lateral{
-    background-color: var(--cor-rosinha);
+    background-color: var(--cor-verde);
     font-family: "Italiana", sans-serif;
 }
 /*Aqui muda a cor dos icones*/
