--- a/editor.css
+++ b/editor.css
@@ -5,6 +5,42 @@
     --cor-rosinha: #b36969;
     --cor-corback_verde: #00ffa887;
 }
+@media screen and (max-width: 300px) {
+    div.conteudo section.cards{
+        max-width: 100%;
+    }
+    div.conteudo {
+        left: 0px;
+    }
+}
+@media screen and (min-width: 300px) and (max-width: 400px){
+    div.conteudo section.cards{
+        max-width: 16pc;
+    }
+    div.conteudo{
+        display: flex;
+        justify-content: center;
+        left: 0px;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 992px){
+    div.conteudo section.cards {
+      max-width: 17pc;
+    }
+    div.conteudo{
+        display: flex;
+        justify-content: center;
+    }
+}
+@media screen and (min-width: 992px){
+    div.conteudo section.cards{
+        max-width: 16pc;
+    }
+    div.conteudo{
+        display: flex;
+        justify-content: center;
+    }
+}
 /*Cor da pagina*/
 body{
     background-color: white;
