--- a/media-query.css
+++ b/media-query.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
+
+@media screen and (min-width: 566px) {
+    .slide-box img{
+        width: 300px;
+    }
+}
+
 @media screen and (min-width: 992px){
     body{
         .abrir{
