--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body{
     width: calc(100% - 50px);
     position: absolute;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     left: 50px;
     height: calc(100% - 80px);
     top: 80px;
@@ -31,6 +32,29 @@ body{
 
 .essl{
     width: 500px;
+}
+
+.titulo h1{
+    font-size: 20px;
+}
+.conteudo p{
+    font-size: 15px;
+}
+
+.noticias{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+div.conteudo{
+    padding: 10px;
+    width: calc(100% - 10%);
+    height: auto;
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: white;
 }
 
 #nav-lateral{
