--- a/style.css
+++ b/style.css
@@ -139,17 +139,17 @@ header{
     display: flex;
     justify-content: center;
     box-shadow: 2px 2px 2px var(--cor-verde);
-    width: 100%;
+    width: calc(100% - 50px);
+    position: absolute;
+    left: 50px;
     height: 4em;
 }
 div#logo{
     width: 105px;
     height: 100%;
-    position: relative;
-    left: 1em;
 }
 div#logo>img{
-    width: 120%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
 }
