--- a/editor.css
+++ b/editor.css
@@ -6,10 +6,11 @@
     --cor-corback_verde: #00ffa887;
     --cor-amarilo:#b1b369;
     --cor-ama:#b38f69;
+    --cor-rosaEscuro:#734242;
     --cor-verdesES:rgb(1, 15, 8);
 }
 div.conteudo section.cards h3{
-    font-size: 100px;
+    font-size: 30px;
 }
 @media screen and (max-width: 300px) {
     div.conteudo section.cards{
@@ -90,5 +91,5 @@ div#descricao,div.conteudo p, div.conteudo h3{
 }
 /*Aqui muda a cor do cards de croche*/
 div.conteudo>section.cards{
-    background: var(--cor-amarilo);
+    background: var(--cor-rosaEscuro);
 }
