--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ body{
     ABAIXO SE EDITA AS NOTICIAS....
 */
 .titulo h1{
-    
     font-size: 20px;
     padding: 0px 25px 0px 25px;
 }
@@ -52,6 +51,7 @@ body{
     ACIMA SE EDITA AS NOTICIAS....
 */
 .noticias{
+    gap: 20px;
     margin-top: 30px;
     display: flex;
     flex-direction: column;
@@ -71,6 +71,14 @@ div.conteudo{
     border: 2px solid black;
     border-radius: 10px;
     background-color: white;
+}
+.conteudo:last-child{
+    flex-direction: row;
+    display: flex;
+    flex-wrap: wrap;
+}
+.conteudo:last-child blockquote{
+    border-radius: 15px;
 }
 
 #nav-lateral{
