--- a/media-query.css
+++ b/media-query.css
@@ -32,6 +32,9 @@
 }
 
 @media screen and (min-width: 992px){
+    .conteudo video{
+        width: 250px;
+    }
     body{
         .abrir{
             display: none;
