--- a/media-query.css
+++ b/media-query.css
@@ -18,7 +18,6 @@
 }
 
 @media screen and (min-width: 378px) and (max-width: 560px){
-
     .essl{
         width: 300px;
     }
@@ -28,6 +27,12 @@
     .nav-manual, .nav-auto{
         width: 300px !important;
         top: 183px !important;
+    }
+}
+
+@media screen and (min-width: 378px) and (max-width: 992px){
+    .conteudo video{
+        width: 250px;
     }
 }
 
