--- a/DarkTheme/darktheme.css
+++ b/DarkTheme/darktheme.css
@@ -33,6 +33,9 @@
 body.dark{
     background-color: black;
 }
+.espaco.dark .noticias .titulo h1{
+    color: var(--cor-rosaEscuro);
+}  
 header.dark{
     background-color: black;
     box-shadow: 2px 2px 2px white;
