--- a/style.css
+++ b/style.css
@@ -43,13 +43,15 @@ body{
     padding: 0px 25px 0px 25px;
 }
 .conteudo p{
-
-    
     font-size: 15px;
 }
 /*
     ACIMA SE EDITA AS NOTICIAS....
 */
+.conteudo img{
+    width: 450px;
+    border-radius: 10px;
+}
 .noticias{
     gap: 20px;
     margin-top: 30px;
