--- a/style.css
+++ b/style.css
@@ -39,18 +39,19 @@ body{
     ABAIXO SE EDITA AS NOTICIAS....
 */
 .titulo h1{
+
     font-size: 20px;
     padding: 0px 25px 0px 25px;
 }
 .conteudo p{
-
-    
-    font-size: 15px;
+    text-align: center;
+    font-size: 18px;
 }
 /*
     ACIMA SE EDITA AS NOTICIAS....
 */
 .noticias{
+    
     gap: 20px;
     margin-top: 30px;
     display: flex;
